--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="baseStyle clearfix jm0203_j6" id="resume_body">
 					<div class="divLeft clearfix" id="bar">
 						<!--头像-->
-						<div data-toggle="modal" data-target="#myModalHead" class="headDiv" id="resume_head"> <span class="headNotice">点击替换头像</span> <img class="resume_head" src="./static/default_head.png" height="200"> </div>
+						<div data-toggle="modal" data-target="#myModalHead" class="headDiv" id="resume_head"> <span class="headNotice">点击替换头像</span> <img class="resume_head" src="./static/head.png" height="200"> </div>
 						<div id="bar_sort"></div>
 						<!--基本信息-->
 						<div class="msgDiv positonDiv resume_add_area resume_sort" id="resume_msg">
