--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<link rel="stylesheet" href="./static/zxbj_base.css">
 		<link rel="stylesheet" href="./static/jm0203.css">
 		<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
-		<link rel="shortcut icon" href="./static/fluidicon.png" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="./static/fluidicon.png" type="image/x-icon"> -->
+		<link rel="shortcut icon" href="https://github.com/fluidicon.png" type="image/x-icon">
 		<style>
 			.m-nav-ul .nav_li:nth-child(3) a.erji_a {
 				color: #F66000;
