--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 							<div class="baseAge baseMsg baseDel" id="resume_age">
 								<div class="delete resume_hidden" for-id="resume_age"></div>
 								<a class="resume_icon_diy icon wbdfont" for-id="age" style="font-size:none"></a>
-								<input class="baseBorder resume_msg resume_lang_age" for-key="age" placeholder="年龄/生日" value="XX岁">
+								<input class="baseBorder resume_msg resume_lang_age" disabled="true" for-key="age" placeholder="年龄/生日" value="XX岁">
 							</div>
 							<div class="baseAddress baseMsg baseDel" id="resume_address">
 								<div class="delete resume_hidden" for-id="resume_address"></div>
 								<a class="resume_icon_diy icon wbdfont" for-id="address" style="font-size:none"></a>
-								<input class="resume_msg baseBorder resume_lang_address" for-key="address" placeholder="联系地址" value="北京市通州区">
+								<input class="resume_msg baseBorder resume_lang_address" disabled="true" for-key="address" placeholder="联系地址" value="北京市通州区">
 							</div>
 							<div class="baseMobile baseMsg baseDel" id="resume_mobile">
 								<div class="delete resume_hidden" for-id="resume_mobile"></div>
 								<a class="resume_icon_diy icon wbdfont" for-id="mobile" style="font-size:none"></a>
-								<input class="resume_msg baseBorder resume_lang_mobile" for-key="mobile" placeholder="联系电话" value="15911085932">
+								<input class="resume_msg baseBorder resume_lang_mobile" disabled="true" for-key="mobile" placeholder="联系电话" value="15911085932">
 							</div>
 							<div class="baseEmail baseMsg baseDel" id="resume_email">
 								<div class="delete resume_hidden" for-id="resume_email"></div>
 								<a class="resume_icon_diy icon wbdfont" for-id="email" style="font-size:none"></a>
-								<input class="resume_msg baseBorder resume_lang_email" for-key="email" placeholder="电子邮箱" value="15911085932@163.com">
+								<input class="resume_msg baseBorder resume_lang_email" disabled="true" for-key="email" placeholder="电子邮箱" value="15911085932@163.com">
 							</div>
 						</div>
 						<!--个人技能-->
@@ -78,28 +78,28 @@
 							<ul class="skillUl resume_append_area">
 								<li class="baseDel resume_delete_area resume_graph_item">
 									<div class="skillTitle">
-										<input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" value="html5">
+										<input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" disabled="true" value="html5">
 									</div>
 									<span><i class="resume_line" for-id="resume_skill_graph" style="width:128px;border-top-style:solid;border-top-width:8px;"></i></span>
 									<div class="delete resume_delete"></div>
 								</li>
 								<li class="baseDel resume_delete_area resume_graph_item">
 									<div class="skillTitle">
-										<input class="resume_value baseBorder" for-key="53815fa3293e57988958e27243b16870" placeholder="填写你的技能名称" value="Vue">
+										<input class="resume_value baseBorder" for-key="53815fa3293e57988958e27243b16870" placeholder="填写你的技能名称" disabled="true" value="Vue">
 									</div>
 									<span><i class="resume_line" for-id="53815fa3293e57988958e27243b16870" style="width:128px;border-top-style:solid;border-top-width:8px;"></i></span>
 									<div class="delete resume_delete"></div>
 								</li>
 								<li class="baseDel resume_delete_area resume_graph_item">
 									<div class="skillTitle">
-										<input class="resume_value baseBorder" for-key="0fb2de17b37fd50c14ccda4d9b96bd94" placeholder="填写你的技能名称" value="微信小程序">
+										<input class="resume_value baseBorder" for-key="0fb2de17b37fd50c14ccda4d9b96bd94" placeholder="填写你的技能名称" disabled="true" value="微信小程序">
 									</div>
 									<span><i class="resume_line" for-id="0fb2de17b37fd50c14ccda4d9b96bd94" style="width:128px;border-top-style:solid;border-top-width:8px;"></i></span>
 									<div class="delete resume_delete"></div>
 								</li>
 								<li class="baseDel resume_delete_area resume_graph_item">
 									<div class="skillTitle">
-										<input class="resume_value baseBorder" for-key="0bab43524d96b1b58129f46097ee14b7" placeholder="填写你的技能名称" value="Jquery">
+										<input class="resume_value baseBorder" for-key="0bab43524d96b1b58129f46097ee14b7" placeholder="填写你的技能名称" disabled="true" value="Jquery">
 									</div>
 									<span><i class="resume_line" for-id="0bab43524d96b1b58129f46097ee14b7" style="width:128px;border-top-style:solid;border-top-width:8px;"></i></span>
 									<div class="delete resume_delete"></div>
@@ -120,25 +120,25 @@
 								<dd class="resume_append_area">
 									<div class="hobbyicon baseDel resume_delete_area resume_icon_item">
 										<a class="resume_icon_diy icon wbdfont" for-id="resume_hobby_icon" style="font-size:none"></a> <span class="hobbyTitle">
-                        <input class="resume_value baseBorder" for-key="resume_hobby_icon" placeholder="兴趣爱好" value="上网">
+                        <input class="resume_value baseBorder" for-key="resume_hobby_icon" placeholder="兴趣爱好" disabled="true" value="上网">
                         </span>
 										<div class="delete resume_delete"></div>
 									</div>
 									<div class="hobbyicon baseDel resume_delete_area resume_icon_item">
 										<a class="resume_icon_diy icon wbdfont" for-id="9eff2552587f9d5970ebab85696208dc" style="font-size:none"></a> <span class="hobbyTitle">
-                        <input class="resume_value baseBorder" for-key="9eff2552587f9d5970ebab85696208dc" placeholder="兴趣爱好" value="上网">
+                        <input class="resume_value baseBorder" for-key="9eff2552587f9d5970ebab85696208dc" placeholder="兴趣爱好" disabled="true" value="上网">
                         </span>
 										<div class="delete resume_delete"></div>
 									</div>
 									<div class="hobbyicon baseDel resume_delete_area resume_icon_item">
 										<a class="resume_icon_diy icon wbdfont" for-id="162b8459a4a82554da5e6a12c2f21c8f" style="font-size:none"></a> <span class="hobbyTitle">
-                        <input class="resume_value baseBorder" for-key="162b8459a4a82554da5e6a12c2f21c8f" placeholder="兴趣爱好" value="上网">
+                        <input class="resume_value baseBorder" for-key="162b8459a4a82554da5e6a12c2f21c8f" placeholder="兴趣爱好" disabled="true" value="上网">
                         </span>
 										<div class="delete resume_delete"></div>
 									</div>
 									<div class="hobbyicon baseDel resume_delete_area resume_icon_item">
 										<a class="resume_icon_diy icon wbdfont" for-id="b3cf5ddaec3cbe67762a2d8d3df17f17" style="font-size:none"></a> <span class="hobbyTitle">
-                        <input class="resume_value baseBorder" for-key="b3cf5ddaec3cbe67762a2d8d3df17f17" placeholder="兴趣爱好" value="上网">
+                        <input class="resume_value baseBorder" for-key="b3cf5ddaec3cbe67762a2d8d3df17f17" placeholder="兴趣爱好" disabled="true" value="上网">
                         </span>
 										<div class="delete resume_delete"></div>
 									</div>
@@ -215,9 +215,8 @@
 										<div class="baseDel_ resume_delete_area_">
 											<div class="delete_ resume_delete_"></div>
 											<div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-												<p>1. 负责PC端及移动端前端的开发工作，能够整理相关的技术文档;</p>
+												<p>1. 负责PC端及移动端前端的开发工作;</p>
 												<p>2. 负责与产品、UI和后端做良好的沟通，对产品能够提供持续的体验优化;</p>
-												<p>3. 参与负责通用组件的开发.</p>
 											</div>
 										</div>
 									</div>
