--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 				margin-top: 25px;
 			}
 		</style>
+		<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?4cd9ae5cca5652bd09492e3b1d79c852";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 	</head>
 	<!--参考网址-->
 	<!--http://www.17sucai.com/preview/14938/2016-06-30/jj/index.html-->
