--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                 			<div class="resume_time baseBorder" contenteditable="true">2014.6-2015.6</div>
                                 		</span>
                                 		<span class="conTitle_company">
-                                			<div class="resume_unit baseBorder" contenteditable="true">中金名车文化传播（北京）有限公司</div>
+                                			<div class="resume_unit baseBorder" contenteditable="true">中进名车文化传播（北京）有限公司</div>
                                 		</span>
                                 		<span class="conTitle_post">
                                 			<div class="resume_job baseBorder" contenteditable="true">前端开发工程师</div>
