--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                         <div class="baseAge baseMsg baseDel" id="resume_age">
                             <div class="delete resume_hidden" for-id="resume_age"></div>
                             <a class="resume_icon_diy icon wbdfont" for-id="age" style="font-size:none"></a>
-                            <input class="baseBorder resume_msg resume_lang_age" disabled="true" for-key="age" placeholder="年龄/生日" value="XX岁">
+                            <input class="baseBorder resume_msg resume_lang_age" disabled="true" for-key="age" placeholder="年龄/生日" value="34岁">
                         </div>
                         <div class="baseAddress baseMsg baseDel" id="resume_address">
                             <div class="delete resume_hidden" for-id="resume_address"></div>
                             <a class="resume_icon_diy icon wbdfont" for-id="address" style="font-size:none"></a>
-                            <input class="resume_msg baseBorder resume_lang_address" disabled="true" for-key="address" placeholder="联系地址" value="北京市通州区">
+                            <input class="resume_msg baseBorder resume_lang_address" disabled="true" for-key="address" placeholder="联系地址" value="北京市朝阳区">
                         </div>
                         <div class="baseMobile baseMsg baseDel" id="resume_mobile">
                             <div class="delete resume_hidden" for-id="resume_mobile"></div>
@@ -208,26 +208,47 @@
                             </dt>
                             <dd class="resume_append_area">
                                 <div class="baseContent baseDel resume_item_items resume_delete_area">
-                                    <div class="delete resume_delete"></div>
-                                    <div class="conTitle">
-                                        <span class="conTitle_time">
-                                            <div class="resume_time baseBorder" contenteditable="true">2003.09-2006.07</div>
-                                        </span>
-                                        <span class="conTitle_company">
-                                            <div class="resume_unit baseBorder" contenteditable="true">河北管理干部学院</div>
-                                        </span>
-                                        <span class="conTitle_post">
-                                            <div class="resume_job baseBorder" contenteditable="true">电子商务</div>
-                                        </span>
-                                    </div>
-                                    <div class="baseDel_ resume_delete_area_">
-                                        <div class="delete_ resume_delete_"></div>
-                                        <div class="conDisc baseBorder baseDel resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                                            <!--<p>主修课程</p>-->
-                                            <!--<p>主修课程</p>-->
-                                        </div>
-                                    </div>
+                                	<div class="delete resume_delete"></div>
+                                	<div class="conTitle">
+                                		<span class="conTitle_time">
+                                			<div class="resume_time baseBorder" contenteditable="true">2003.09-2006.07</div>
+                                		</span>
+                                		<span class="conTitle_company">
+                                			<div class="resume_unit baseBorder" contenteditable="true">河北管理干部学院</div>
+                                		</span>
+                                		<span class="conTitle_post">
+                                			<div class="resume_job baseBorder" contenteditable="true">电子商务</div>
+                                		</span>
+                                	</div>
+                                	<div class="baseDel_ resume_delete_area_">
+                                		<div class="delete_ resume_delete_"></div>
+                                		<div class="conDisc baseBorder baseDel resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
+                                			<!--<p>主修课程</p>-->
+                                			<!--<p>主修课程</p>-->
+                                		</div>
+                                	</div>
                                 </div>
+								<div class="baseContent baseDel resume_item_items resume_delete_area">
+									<div class="delete resume_delete"></div>
+									<div class="conTitle">
+										<span class="conTitle_time">
+											<div class="resume_time baseBorder" contenteditable="true">2000.09-2003.07</div>
+										</span>
+										<span class="conTitle_company">
+											<div class="resume_unit baseBorder" contenteditable="true">涿州三中</div>
+										</span>
+										<span class="conTitle_post">
+											<div class="resume_job baseBorder" contenteditable="true"></div>
+										</span>
+									</div>
+									<div class="baseDel_ resume_delete_area_">
+										<div class="delete_ resume_delete_"></div>
+										<div class="conDisc baseBorder baseDel resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
+											<!--<p>主修课程</p>-->
+											<!--<p>主修课程</p>-->
+										</div>
+									</div>
+								</div>
                             </dd>
                         </dl>
                     </div>
