--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                     <div class="baseDel_ resume_delete_area_">
                                         <div class="delete_ resume_delete_"></div>
                                         <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                                            <p>1. 负责PC端及移动端前端的开发工作;</p>
+                                            <p>1. 前后端分离开发模式，前端既写页面原型也写用户的js交互逻辑。</p>
                                             <p>2. 负责与产品、UI和后端做良好的沟通，对产品能够提供持续的体验优化;</p>
                                             <p>3. 熟练使用hml5\js\css3等技术，且具备良好代码习惯，能写出易读易维护的代码；</p>
                                             <p>4. 熟练使用vue vuex vue-router，vue全家桶开发</p>
@@ -376,8 +376,8 @@
                                     <div class="baseDel_ resume_delete_area_">
                                         <div class="delete_ resume_delete_"></div>
                                         <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                                            <p>地图选址vue组件编写</p>
                                             <p>熟练使用vue vuex vue-router，vue全家桶开发</p>
+                                            <p>用vue全家桶开发H5相关的上下车地址选择组件拆分和js逻辑</p>
                                         </div>
                                     </div>
                                 </div>
@@ -397,8 +397,8 @@
                                     <div class="baseDel_ resume_delete_area_">
                                         <div class="delete_ resume_delete_"></div>
                                         <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                                            <p>微信小程序页面组件拆分和个人中心功能实现</p>
                                             <p>熟练使用wxml wxss 开发小程序</p>
+                                            <p>基于原生微信小程序开发跟人中心先关页面</p>
                                         </div>
                                     </div>
                                 </div>
@@ -444,13 +444,13 @@
                                 <div class="baseContent">
                                     <div class="conDisc baseBorder resume_lang_self_value resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top"
                                         title="复制粘贴文字请右键-粘贴为纯文本">
+										<p>前后端分离开发模式，前端既写页面也写用户的js交互。</p>
 										<p>熟练使用hml5\js\css3等技术，且具备良好代码习惯，能写出易读易维护的代码；<br>
 熟练使用vue vuex vue-router，vue全家桶开发<br>
 熟练使用wxml wxss 开发小程序<br>
 良好的学习能力，问题解决能力，沟通能力，团队合作能力，创新能力，抗压能力。</p>
                                         <p>本人做事稳重，对待工作认真，责任心较强，待人真诚，善于沟通，时刻保持学习，积极拥抱变化。喜</p>
-                                        <p>欢前端开发，具备一定的分析、设计、开发能力，拥有较强的学习能力与团队精神，能够很快的适应工</p>
-                                        <p>作环境。</p>
+                                        <p>欢前端开发，具备一定的分析、设计、开发能力，拥有较强的学习能力与团队精神。</p>
                                     </div>
                                 </div>
                             </dd>
