--- a/index.html
+++ b/index.html
@@ -33,15 +33,6 @@
             margin-top: 25px;
         }
     </style>
-    <script>
-        var _hmt = _hmt || [];
-        (function () {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?4cd9ae5cca5652bd09492e3b1d79c852";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
 </head>
 <!--参考网址-->
 <!--http://www.17sucai.com/preview/14938/2016-06-30/jj/index.html-->
@@ -187,6 +178,10 @@
                         </h1>
                         <h2>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">求职目标：前端开发工程师</div>
+                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用hml5\js\css3等技术，且具备良好代码习惯，能写出易读易维护的代码；</div>
+                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用vue vuex vue-router，vue全家桶开发；</div>
+                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用wxml wxss 开发小程序；</div>
+                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">丰富的web开发经验，丰富的项目经验。4+前端工作经验，样式和js逻辑并重，</div>
                         </h2>
                     </div>
                     <div id="foo_sort"></div>
