--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                     <div class="baseDel_ resume_delete_area_">
                                         <div class="delete_ resume_delete_"></div>
                                         <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                                            <p>1. 前后端分离开发模式，前端既写页面原型也写用户的js交互逻辑。</p>
+                                            <p>1. 实行前后端分离的开发模式，前端组既生产组件，也参与到业务模块的前端部分开发，后台组只提供API；</p>
                                             <p>2. 负责与产品、UI和后端做良好的沟通，对产品能够提供持续的体验优化;</p>
                                             <p>3. 熟练使用hml5\js\css3等技术，且具备良好代码习惯，能写出易读易维护的代码；</p>
                                             <p>4. 熟练使用vue vuex vue-router，vue全家桶开发</p>
@@ -440,7 +440,8 @@
                                 <div class="baseContent">
                                     <div class="conDisc baseBorder resume_lang_self_value resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top"
                                         title="复制粘贴文字请右键-粘贴为纯文本">
-										<p>前后端分离开发模式，前端既写页面也写用户的js交互。</p>
+										<p>实行前后端分离的开发模式，前端组既生产组件，也参与到业务模块的前端部分开发，
+后台组只提供API。</p>
 										<p>熟练使用hml5\js\css3等技术，且具备良好代码习惯，能写出易读易维护的代码；<br>
 熟练使用vue vuex vue-router，vue全家桶开发<br>
 熟练使用wxml wxss 开发小程序<br>
