--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用vue vuex vue-router，vue全家桶开发；</div>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用wxml wxss 开发小程序；</div>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">丰富的web开发经验，4+前端工作经验，样式和js逻辑并重；</div>
-                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">丰富的项目经验，参与开发首汽约车H5开发（vue全家桶），首汽约车小程序开发（微信原生），首汽约车各种活动页面制作。</div>
+                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">丰富的项目经验，参与首汽约车H5开发（vue全家桶），首汽约车小程序开发（微信原生），首汽约车各种活动页面制作。</div>
                         </h2>
                     </div>
                     <div id="foo_sort"></div>
