--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </h1>
                         <h2>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">求职目标：前端开发工程师</div>
-                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练前后端分离的开发模式，前端组既生产组件，也参与到业务模块的前端部分开发，后台组只提供API；</div>
+                            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟悉前后端分离的开发模式，前端组既生产组件，也参与到业务模块的前端部分开发，后台组只提供API；</div>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用hml5\js\css3等技术，且具备良好代码习惯，能写出易读易维护的代码；</div>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用vue vuex vue-router，vue全家桶开发；</div>
                             <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">熟练使用wxml wxss 开发小程序；</div>
