--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <ul class="skillUl resume_append_area">
                             <li class="baseDel resume_delete_area resume_graph_item">
                                 <div class="skillTitle">
-                                    <input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" disabled="true" value="html5">
+                                    <input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" disabled="true" value="html5+css3+flex">
                                 </div>
                                 <span>
                                     <i class="resume_line" for-id="resume_skill_graph" style="width:128px;border-top-style:solid;border-top-width:8px;"></i>
@@ -95,7 +95,7 @@
                             <li class="baseDel resume_delete_area resume_graph_item">
                                 <div class="skillTitle">
                                     <input class="resume_value baseBorder" for-key="53815fa3293e57988958e27243b16870" placeholder="填写你的技能名称" disabled="true"
-                                        value="Vue">
+                                        value="Vue全家桶">
                                 </div>
                                 <span>
                                     <i class="resume_line" for-id="53815fa3293e57988958e27243b16870" style="width:128px;border-top-style:solid;border-top-width:8px;"></i>
@@ -115,7 +115,7 @@
                             <li class="baseDel resume_delete_area resume_graph_item">
                                 <div class="skillTitle">
                                     <input class="resume_value baseBorder" for-key="0bab43524d96b1b58129f46097ee14b7" placeholder="填写你的技能名称" disabled="true"
-                                        value="Jquery">
+                                        value="Jquery+swiper">
                                 </div>
                                 <span>
                                     <i class="resume_line" for-id="0bab43524d96b1b58129f46097ee14b7" style="width:128px;border-top-style:solid;border-top-width:8px;"></i>
@@ -141,28 +141,28 @@
                                 <div class="hobbyicon baseDel resume_delete_area resume_icon_item">
                                     <a class="resume_icon_diy icon wbdfont" for-id="resume_hobby_icon" style="font-size:none"></a>
                                     <span class="hobbyTitle">
-                                        <input class="resume_value baseBorder" for-key="resume_hobby_icon" placeholder="兴趣爱好" disabled="true" value="上网">
+                                        <input class="resume_value baseBorder" for-key="resume_hobby_icon" placeholder="兴趣爱好" disabled="true" value="看书">
                                     </span>
                                     <div class="delete resume_delete"></div>
                                 </div>
                                 <div class="hobbyicon baseDel resume_delete_area resume_icon_item">
                                     <a class="resume_icon_diy icon wbdfont" for-id="9eff2552587f9d5970ebab85696208dc" style="font-size:none"></a>
                                     <span class="hobbyTitle">
-                                        <input class="resume_value baseBorder" for-key="9eff2552587f9d5970ebab85696208dc" placeholder="兴趣爱好" disabled="true" value="上网">
+                                        <input class="resume_value baseBorder" for-key="9eff2552587f9d5970ebab85696208dc" placeholder="兴趣爱好" disabled="true" value="运动">
                                     </span>
                                     <div class="delete resume_delete"></div>
                                 </div>
                                 <div class="hobbyicon baseDel resume_delete_area resume_icon_item">
                                     <a class="resume_icon_diy icon wbdfont" for-id="162b8459a4a82554da5e6a12c2f21c8f" style="font-size:none"></a>
                                     <span class="hobbyTitle">
-                                        <input class="resume_value baseBorder" for-key="162b8459a4a82554da5e6a12c2f21c8f" placeholder="兴趣爱好" disabled="true" value="上网">
+                                        <input class="resume_value baseBorder" for-key="162b8459a4a82554da5e6a12c2f21c8f" placeholder="兴趣爱好" disabled="true" value="技术宅">
                                     </span>
                                     <div class="delete resume_delete"></div>
                                 </div>
                                 <div class="hobbyicon baseDel resume_delete_area resume_icon_item">
                                     <a class="resume_icon_diy icon wbdfont" for-id="b3cf5ddaec3cbe67762a2d8d3df17f17" style="font-size:none"></a>
                                     <span class="hobbyTitle">
-                                        <input class="resume_value baseBorder" for-key="b3cf5ddaec3cbe67762a2d8d3df17f17" placeholder="兴趣爱好" disabled="true" value="上网">
+                                        <input class="resume_value baseBorder" for-key="b3cf5ddaec3cbe67762a2d8d3df17f17" placeholder="兴趣爱好" disabled="true" value="拍照">
                                     </span>
                                     <div class="delete resume_delete"></div>
                                 </div>
@@ -225,27 +225,6 @@
                                 		</div>
                                 	</div>
                                 </div>
-								<div class="baseContent baseDel resume_item_items resume_delete_area">
-									<div class="delete resume_delete"></div>
-									<div class="conTitle">
-										<span class="conTitle_time">
-											<div class="resume_time baseBorder" contenteditable="true">2000.09-2003.07</div>
-										</span>
-										<span class="conTitle_company">
-											<div class="resume_unit baseBorder" contenteditable="true">涿州三中</div>
-										</span>
-										<span class="conTitle_post">
-											<div class="resume_job baseBorder" contenteditable="true"></div>
-										</span>
-									</div>
-									<div class="baseDel_ resume_delete_area_">
-										<div class="delete_ resume_delete_"></div>
-										<div class="conDisc baseBorder baseDel resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-											<!--<p>主修课程</p>-->
-											<!--<p>主修课程</p>-->
-										</div>
-									</div>
-								</div>
                             </dd>
                         </dl>
                     </div>
@@ -375,6 +354,7 @@
                                         <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
                                             <p>熟练使用vue vuex vue-router，vue全家桶开发</p>
                                             <p>用vue全家桶开发H5相关的上下车地址选择组件拆分和js逻辑</p>
+                                            <p>根据产品需求优化H5</p>
                                         </div>
                                     </div>
                                 </div>
@@ -396,6 +376,7 @@
                                         <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
                                             <p>熟练使用wxml wxss 开发小程序</p>
                                             <p>基于原生微信小程序开发跟人中心先关页面</p>
+                                            <p>我的钱包发票开具功能制作</p>
                                         </div>
                                     </div>
                                 </div>
