--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -3,6 +3,61 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>A2HS demo</title>
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+    <!-- 添加 favicon icon -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
+    <!-- iOS 设备 begin -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- 启用 WebApp 全屏模式 -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <!-- 隐藏状态栏/设置状态栏颜色 -->
+    <meta name="apple-mobile-web-app-title" content="标题">
+    <!-- 添加到主屏后的标题 -->
+    <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
+    <!-- 添加智能 App 广告条 Smart App Banner -->
+
+    <!-- iOS 图标 begin -->
+    <link rel="apple-touch-icon-precomposed" href="/images/fox-icon.png"/>
+    <!-- iPhone 和 iTouch，默认 57x57 像素，必须有 -->
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/fox-icon.png"/>
+    <!-- Retina iPhone 和 Retina iTouch，114x114 像素，可以没有，但推荐有 -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/fox-icon.png"/>
+    <!-- Retina iPad，144x144 像素，可以没有，但推荐有 -->
+    <!-- iOS 图标 end -->
+
+    <!-- iOS 启动画面 begin -->
+    <link rel="apple-touch-startup-image" sizes="768x1004" href="/images/fox-icon.png"/>
+    <!-- iPad 竖屏 768 x 1004（标准分辨率） -->
+    <link rel="apple-touch-startup-image" sizes="1536x2008" href="/images/fox-icon.png"/>
+    <!-- iPad 竖屏 1536x2008（Retina） -->
+    <link rel="apple-touch-startup-image" sizes="1024x748" href="/images/fox-icon.png"/>
+    <!-- iPad 横屏 1024x748（标准分辨率） -->
+    <link rel="apple-touch-startup-image" sizes="2048x1496" href="/images/fox-icon.png"/>
+    <!-- iPad 横屏 2048x1496（Retina） -->
+ 
+    <link rel="apple-touch-startup-image" href="/images/fox-icon.png"/>
+    <!-- iPhone/iPod Touch 竖屏 320x480 (标准分辨率) -->
+    <link rel="apple-touch-startup-image" sizes="640x960" href="/images/fox-icon.png"/>
+    <!-- iPhone/iPod Touch 竖屏 640x960 (Retina) -->
+    <link rel="apple-touch-startup-image" sizes="640x1136" href="/images/fox-icon.png"/>
+    <!-- iPhone 5/iPod Touch 5 竖屏 640x1136 (Retina) -->
+    <!-- iOS 启动画面 end -->
+
+    <!-- iOS 设备 END -->
+    <meta name="format-detection" content="telphone=no, email=no"/>
+    <!-- 忽略数字自动识别为电话号码 忽略识别邮箱 -->
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes">
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true">
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application">
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app">
+    <!-- windows phone 点击无高光 -->
+    <meta name="msapplication-tap-highlight" content="no">
+    <!-- 转码申明：用百度打开网页可能会对其进行转码（比如贴广告），避免转码可添加如下meta。 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
     <link href="./style.css" rel="stylesheet">
     <script src="./index.js" defer=""></script>
     <link rel="manifest" href="manifest.webmanifest">
