--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>A2HS demo</title>
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
     <!-- 添加 favicon icon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <!-- iOS 设备 begin -->
