--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -65,5 +65,5 @@
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
-    <button>Notify me!</button>
+    <button class="button">Notify me!</button>
 </body></html>
