--- a/pwa/index.html
+++ b/pwa/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>peavue</title>
+    <link rel="manifest" href="./static/manifest.webmanifest">
     <script type="text/javascript">
       (function() {
         if('serviceWorker' in navigator) {
