--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -82,11 +82,18 @@
         $.ajax({
                 url: 'https://gw-passenger-wap.01zhuanche.com/gw-passenger-wap/zhuanche-passenger/passenger/charge/getServiceType',
                 type: 'post',
-				data: {cid: 44},
+        		data: {cid: 44},
                 dataType:"json",
                 success: function(data) {console.log(data.name)},
                 timeout: 3000           
-            });  
+            }); 
+		$.ajax({
+		        url: 'https://gw-passenger-wap.01zhuanche.com/gw-passenger-wap/zhuanche-passenger/api/v1/common/group/list?type=1&cid=44&nId=&sId=2',
+		        type: 'get',
+		        dataType:"json",
+		        success: function(data) {console.log(data.name)},
+		        timeout: 3000           
+		    }); 
       }, 5000);
     </script>
 </body></html>
